--- a/app/views/incoming_payments/_form.html.haml
+++ b/app/views/incoming_payments/_form.html.haml
@@ -6,7 +6,7 @@
   -association :mode
 
 -field_set(:depositable_options) do
-  -association :responsible, :source => "Entity#workers"
+  -association :responsible, :source => :employees
   -input :paid_on
   -input :check_number
   -input :account_number
