--- a/app/views/outgoing_deliveries/show.html.haml
+++ b/app/views/outgoing_deliveries/show.html.haml
@@ -10,12 +10,12 @@
   -l.attribute :weight
   -l.attribute :pretax_amount
   -l.attribute :amount
-  -l.attribute :sale, :url=>true
-  -l.attribute :contact
+  -l.attribute :sale, :url => true
+  -l.attribute :address
   -l.attribute :planned_on
   -l.attribute :moved_on
-  -l.attribute :transporter, :url=>true
-  -l.attribute :transport, :url=>true
+  -l.attribute :transporter, :url => true
+  -l.attribute :transport, :url => true
   -l.attribute :comment
 
 %h2=OutgoingDelivery.human_attribute_name(:lines)
