--- a/app/views/prices/_amount_form.html.haml
+++ b/app/views/prices/_amount_form.html.haml
@@ -1,6 +1,4 @@
-=formalize do |f|
-  -f.title :amount
-  -f.field :price, :category_id, :choices=>{:reflection=>:entity_categories}, :new=>true
-  -f.field :price, :pretax_amount
-  -f.field :price, :tax_id, :choices=>{:reflection=>:taxes}, :new=>true
-  -f.field :price, :currency, :choices=>currencies
+-association :category
+-input :pretax_amount
+-association :tax
+-input :currency, :source => :currencies
