--- a/app/views/product_categories/_form.html.haml
+++ b/app/views/product_categories/_form.html.haml
@@ -1,9 +1,10 @@
 -# TODO Manage soft_copy_to
 -field_set do
   -input :name, :soft_copy_to => :catalog_name
-  -input :comment, :field => :text
-  -association :parent, :source => "self#others"
+  -input :comment
+  -association :parent
+
 -field_set(:catalog) do
   -input :catalog_name
-  -input :catalog_description, :field => :text
+  -input :catalog_description
 
