--- a/app/views/sales/show.html.haml
+++ b/app/views/sales/show.html.haml
@@ -3,14 +3,14 @@
 =toolbar do |t|
   -t.edit @sale if @sale.draft?
   -if @sale.can_confirm?
-    -t.confirm @sale, :method=>:post, "data-confirm" => tc(:are_you_sure_you_want_to_confirm)
+    -t.confirm @sale, :method => :post, "data-confirm" => tc(:are_you_sure_you_want_to_confirm)
   -if @sale.can_propose?
-    -t.propose_and_invoice @sale, :method=>:post, "data-confirm" => tc(:are_you_sure_you_want_to_invoice)
+    -t.propose_and_invoice @sale, :method => :post, "data-confirm" => tc(:are_you_sure_you_want_to_invoice)
   -if @sale.can_invoice?
-    -t.invoice @sale, :method=>:post, "data-confirm" => tc(:are_you_sure_you_want_to_invoice)
+    -t.invoice @sale, :method => :post, "data-confirm" => tc(:are_you_sure_you_want_to_invoice)
   -for event in [:propose, :correct, :refuse]
-    -t.send(event, @sale, :method=>:post, "data-confirm" => tc(:are_you_sure)) if @sale.send("can_#{event}?")
-  -t.abort(@sale, :method=>:post, "data-confirm" => tc(:are_you_sure)) if @sale.can_abort?
+    -t.send(event, @sale, :method => :post, "data-confirm" => tc(:are_you_sure)) if @sale.send("can_#{event}?")
+  -t.abort(@sale, :method => :post, "data-confirm" => tc(:are_you_sure)) if @sale.can_abort?
   -if @sale.invoice?
     -t.print_sales_invoice @sale
     -t.cancel(@sale) if @sale.cancelable?
@@ -18,29 +18,29 @@
     -t.print_sales_order @sale
 
 =attributes_list(@sale) do |l|
-  -l.attribute :client, :label=>:label, :url=>true
+  -l.attribute :client, :label => :label, :url => true
   -l.attribute :number
   -l.attribute :initial_number if @sale.invoice?
   -l.attribute :state_label
-  -l.attribute :responsible, :label=>:full_name
+  -l.attribute :responsible, :label => :full_name
   -l.attribute :created_on
   -l.attribute :confirmed_on if @sale.confirmed_on?
   -l.attribute :invoiced_on if @sale.invoiced_on?
-  -l.attribute :origin, :url=>true if @sale.invoice? and @sale.origin
-  -l.attribute :payment_delay, :label=>:name
+  -l.attribute :origin, :url => true if @sale.invoice? and @sale.origin
+  -l.attribute :payment_delay, :label => :name
   -l.attribute :nature
   -l.attribute :currency unless @sale.currency == Entity.of_company.currency
   -l.attribute :comment unless @sale.comment.blank?
-  -l.attribute :contact, :label=>:address
-  -l.attribute :delivery_contact, :label=>:address
-  -l.attribute :invoice_contact, :label=>:address
+  -l.attribute :address, :label => :coordinate
+  -l.attribute :delivery_address, :label => :coordinate
+  -l.attribute :invoice_address, :label => :coordinate
   -l.attribute :letter_format
-  -l.attribute(:journal_entry, :url=>true) if @sale.journal_entry
+  -l.attribute(:journal_entry, :url => true) if @sale.journal_entry
   -if @sale.letter_format?
     -l.attribute :subject
     -l.attribute :function_title
-    -l.attribute :introduction, :field=>:textarea
-    -l.attribute :conclusion, :field=>:textarea
+    -l.attribute :introduction, :field => :textarea
+    -l.attribute :conclusion, :field => :textarea
 
 
 -if ["products", "summary", ""].include? params[:step].to_s
@@ -48,21 +48,21 @@
   -@sale_line = @sale.lines.new
   -if @sale.draft?
     =toolbar do |t|
-      -t.link(:new, :controller=>:sale_lines, :sale_id=>@sale.id)
-    =render :partial=>"sale_lines/row_form"
+      -t.link(:new, :controller => :sale_lines, :sale_id => @sale.id)
+    =render :partial => "sale_lines/row_form"
   =list :lines do
     %tr.total
-      %th{:colspan=>7}=tc :total
+      %th{:colspan => 7}=tc :total
       %td=number_to_money(@sale.pretax_amount, @sale.currency)
       %td=number_to_money(@sale.amount, @sale.currency)
-      %th{:colspan=>3}
+      %th{:colspan => 3}
   -if @sale.subscriptions.size>0
-    %h2=tl :x_subscriptions, :count=>@sale.subscriptions.size
+    %h2=tl :x_subscriptions, :count => @sale.subscriptions.size
     -if @sale.draft?
       =toolbar do |t|
         -for line in @sale.lines.includes(:product, :reduction_origin)
           -if line.product.subscription? and not line.reduction_origin
-            -t.link :add_subscription_for_sale_line, {:action=>:new, :controller=>:subscriptions, :sale_line_id=>line.id, :nature_id=>line.product.subscription_nature_id}, :i18n=>{:position=>line.position}
+            -t.link :add_subscription_for_sale_line, {:action => :new, :controller => :subscriptions, :sale_line_id => line.id, :nature_id => line.product.subscription_nature_id}, :i18n => {:position => line.position}
     =list :subscriptions
 
 
@@ -71,9 +71,9 @@
     %h2=tc :incoming_payments
     -unless @sale.unpaid_amount.zero?
       =toolbar do |t|
-        -t.link(:new, :controller=>:incoming_payment_uses, :expense_type=>:sale, :expense_id=>@sale.id, :i18n=>{:label=>@sale.label})
+        -t.link(:new, :controller => :incoming_payment_uses, :expense_type => :sale, :expense_id => @sale.id, :i18n => {:label => @sale.label})
         -for payment in @sale.usable_payments
-          -t.link(tl("use_incoming_payment", :payment=>payment.label), {:action=>:create, :controller=>:incoming_payment_uses, :incoming_payment_use=>{:expense_type=>@sale.class.name, :expense_id=>@sale.id, :payment_id=>payment.id}}, :method=>:post)
+          -t.link(tl("use_incoming_payment", :payment => payment.label), {:action => :create, :controller => :incoming_payment_uses, :incoming_payment_use => {:expense_type => @sale.class.name, :expense_id => @sale.id, :payment_id => payment.id}}, :method => :post)
     =list :payment_uses
 
 
@@ -81,7 +81,7 @@
   -if @sale.deliverable?
     %h2=tc :undelivered
     =toolbar do |t|
-      -t.link :new, :controller=>:outgoing_deliveries, :sale_id=>@sale.id
+      -t.link :new, :controller => :outgoing_deliveries, :sale_id => @sale.id
     =list :undelivered_lines
   -if @sale.deliveries.count > 0
     %h2=Sale.human_attribute_name("deliveries")
@@ -94,7 +94,7 @@
 -if ["products", "summary", ""].include? params[:step].to_s
   %h2=tc :financial_state
   %table.list
-    -for k, v in @sale.stats # (:with_balance=>true)
+    -for k, v in @sale.stats # (:with_balance => true)
       %tr.total
         %th=tc(k)
-        %td=I18n.localize(v, :currency=>@sale.currency)
+        %td=I18n.localize(v, :currency => @sale.currency)
