--- a/app/views/entities/_mail_fields.html.haml
+++ b/app/views/entities/_mail_fields.html.haml
@@ -9,3 +9,4 @@
   =f.input(:mail_line_4, :readonly => !entity_address.new_record?, :wrapper_html => {:id => 'mail-line-4-field'})
   =f.input(:mail_line_5, :readonly => !entity_address.new_record?, :wrapper_html => {:id => 'mail-line-5-field'})
   =f.input(:mail_line_6, :readonly => !entity_address.new_record?, :wrapper_html => {:id => 'mail-line-6-field'})
+  =f.input(:mail_country, :collection => countries, :readonly => !entity_address.new_record?, :wrapper_html => {:id => 'mail-country-field'})
