--- a/app/views/financial_years/close.html.haml
+++ b/app/views/financial_years/close.html.haml
@@ -1,10 +1,9 @@
 =form_tag do
-  =formalize do |f|
-    -f.error :financial_year
-    -f.field FinancialYear.model_name.human, @financial_year.code
-    -f.field :financial_year, :stopped_on, :choices => @financial_year.closures.collect{|d| [I18n.localize(d), d]}
-    -f.title :use_renew
-    -f.field tc(:select_renew_journal), select_tag("journal_id", options_for_select([[tc("dont_use_journal"), ""], [tc("create_journal"), 0]]+Journal.collect{|j| [j.name, j.id]}, :selected=>params[:journal_id]))
-  .actions
+  =field_set @financial_year do
+    -field FinancialYear.model_name.human, @financial_year.code
+    -field :stopped_on, :source => @financial_year.closures.collect{|d| [I18n.localize(d), d]}
+  =field_set :use_renew do
+    -field tc(:select_renew_journal), select_tag("journal_id", options_for_select([[tc("dont_use_journal"), ""], [tc("create_journal"), 0]] + Journal.collect{|j| [j.name, j.id]}, :selected => params[:journal_id]))
+  =form_actions do
     =submit_tag(tc(:close_financial_year), "data-confirm" => tg(:are_you_sure))
     =link_to_back
