--- a/app/views/outgoing_deliveries/_form.html.haml
+++ b/app/views/outgoing_deliveries/_form.html.haml
@@ -1,39 +1,12 @@
--# TODO Form
+-# TODO Manage  extra content in forms
 =sales_steps(@outgoing_delivery.sale)
 
-=formalize do |f|
-  -f.error :outgoing_delivery
-  -f.title :infos
-  -f.field :outgoing_delivery, :contact_id, :choices=>:outgoing_delivery_contacts, :new=>{:entity_id=>@outgoing_delivery.sale.client_id}
-  -f.field :outgoing_delivery, :mode_id, :choices=>{:reflection=>:outgoing_delivery_modes}, :new=>true
-  -f.field :outgoing_delivery, :planned_on
-  -f.field :outgoing_delivery, :transporter_id, :choices=>{:reflection=>:transporters, :include_blank=>""}, :new=>{:controller=>:entities, :transporter=>1}
+=field_set do
+  -# TODO: Manage filtered source with column
+  -association :address, :new => {:entity_id => @outgoing_delivery.sale.client_id}
+  -association :mode
+  -input :planned_on
+  -association :transporter, :source => :transporters, :new => {:transporter => 1}
 
-%h2=OutgoingDelivery.human_attribute_name("lines")
-%table.list
-  %tr
-    %th=OutgoingDeliveryLine.human_attribute_name(:product)
-    %th=Price.human_attribute_name(:pretax_amount)
-    %th=Price.human_attribute_name(:amount)
-    %th=tc(:total_quantity)
-    %th=OutgoingDeliveryLine.human_attribute_name(:unit)
-    %th=tc(:quantity_rest)
-    %th=tc(:quantity)
-    %th=OutgoingDeliveryLine.human_attribute_name(:pretax_amount)
-    %th=OutgoingDeliveryLine.human_attribute_name(:amount)
-  -for line in @outgoing_delivery_lines
-    %tr{:class=>cycle('odd','even')}
-      %td=line.sale_line.label
-      %td.dec{:class=>"pta-#{line.sale_line_id}"}=line.sale_line.price.pretax_amount
-      %td.dec{:class=>"awt-#{line.sale_line_id}"}=line.sale_line.price.amount
-      %td.dec=line.sale_line.quantity
-      %td=line.sale_line.unit.name
-      %td.dec=line.sale_line.undelivered_quantity
-      %td{:style=>'text-align:center'}
-        =text_field_tag "outgoing_delivery_line[#{line.sale_line_id}][quantity]", line.quantity, :id=>"outgoing_delivery_line_#{line.sale_line_id}_quantity", :class=>"pta-#{line.sale_line_id} awt-#{line.sale_line_id}", "data-less-than-or-equal-to"=>line.quantity+line.sale_line.undelivered_quantity
-      %td.dec.pta{"data-use"=>".pta-#{line.sale_line_id}", "data-calculate"=>"mul"}
-      %td.dec.awt{"data-use"=>".awt-#{line.sale_line_id}", "data-calculate"=>"mul"}
-  %tr.total
-    %th{:colspan=>7}=tg :total
-    %td#total_pretax_amount{"data-use"=>".pta"}=@outgoing_delivery.pretax_amount
-    %td#total_amount{"data-use"=>".awt"}=@outgoing_delivery.amount
+=field_set :outgoing_delivery_lines do
+  -partial :lines
