--- a/app/views/purchases/show.html.haml
+++ b/app/views/purchases/show.html.haml
@@ -15,14 +15,14 @@
   -l.attribute :supplier, :label=>:label, :url=>true
   -l.attribute :number
   -l.attribute :reference_number
-  -l.attribute :state_label
+  -l.attribute :state
   -l.attribute :responsible, :label=>:full_name
   -l.attribute :created_on
   -l.attribute :confirmed_on
   -l.attribute :planned_on
   -l.attribute :currency unless @purchase.currency == Entity.of_company.currency
   -l.attribute :comment
-  -l.attribute :delivery_contact, :label=>:address
+  -l.attribute :delivery_address, :label=>:coordinate
   -l.attribute :journal_entry, :url=>true
 
 
