--- a/app/views/entities/_email_fields.html.haml
+++ b/app/views/entities/_email_fields.html.haml
@@ -2,5 +2,5 @@
 -entity_address ||= f.object
 .nested-fields
   =link_to_remove_association('labels.remove_email'.t, f, :class => 'nested-remove remove-email')
-  =f.input(:canal, :as => :hidden, :readonly => !entity_address.new_record?, :wrapper_html => {:id => 'canal-field'})
-  =f.input(:coordinate, :as => :email, :readonly => !entity_address.new_record?, :wrapper_html => {:id => 'coordinate-field'})
+  =f.input(:canal, :as => :hidden, :wrapper_html => {:id => 'canal-field'})
+  =f.input(:coordinate, :as => :email, :wrapper_html => {:id => 'coordinate-field'})
