--- a/app/views/journals/import.html.haml
+++ b/app/views/journals/import.html.haml
@@ -1,8 +1,6 @@
-=form_tag(nil, {:multipart=>true, :class=>"vbox flex", :style=>'overflow:none'}) do
-  .fields.flex
-    =formalize do |f|
-      -f.field tc("file_to_import"), file_field_tag(:upload)
-      -f.field tc("file_nature"), select_tag(:nature, options_for_select(@supported_files))
-    .end
-  .actions
+=form_tag(nil, {:multipart => true}) do
+  =field_set :file do
+    -field tc("file_to_import"), file_field_tag(:upload)
+    -field tc("file_nature"), select_tag(:nature, options_for_select(@supported_files))
+  =form_actions do
     =submit_tag tg(:import), "data-confirm" => tg(:are_you_sure)
