--- a/app/views/journals/reopen.html.haml
+++ b/app/views/journals/reopen.html.haml
@@ -1,8 +1,6 @@
 =form_tag do
-  =formalize do |f|
-    - f.error :journal
-    - f.title :select_closure_date
-    - f.field :journal, :closed_on, :choices => @journal.reopenings.collect{|d| [::I18n.l(d), d]}
-  .actions
+  =field_set :select_closure_date, @journal do
+    -field :closed_on, :source => @journal.reopenings.collect{|d| [::I18n.l(d), d]}
+  =form_actions do
     =submit_tag(tc(:reopen_journal))
     =link_to_back(:label=>:cancel)
