--- a/app/views/outgoing_payment_uses/_form.html.haml
+++ b/app/views/outgoing_payment_uses/_form.html.haml
@@ -1,9 +1,8 @@
--# TODO Form
+-# TODO Manage subheading
 -expense = @outgoing_payment_use.expense
-=subheading :attach_an_outgoing_payment_to_expense, :number=>expense.number, :type=>expense.class.model_name.human
+=subheading :attach_an_outgoing_payment_to_expense, :number => expense.number, :type => expense.class.model_name.human
 
-=formalize do |f|
-  -f.error 'outgoing_payment_use'
-  -f.field :outgoing_payment_use, :downpayment
-  -f.field :outgoing_payment_use, :payment_id, :choices=>{:reflection=>:usable_outgoing_payments}, :new=>{:payee_id=>@outgoing_payment_use.expense.supplier_id, :amount=>@outgoing_payment_use.expense.unpaid_amount}
-=hidden_field(:outgoing_payment_use, :expense_id)
+=field_set do
+  -input :expense_id, :field => :hidden
+  -input :downpayment
+  -association :payment, :source => :unbalanceds, :new => {:payee_id => "expense.supplier_id".to_sym, :amount => "expense.unpaid_amount".to_sym}
