--- a/app/views/sale_lines/_detail_form.html.haml
+++ b/app/views/sale_lines/_detail_form.html.haml
@@ -3,21 +3,20 @@
     -f.field :sale_line, :quantity
     -f.field SaleLine.human_attribute_name("unit_id"), @sale_line.product.unit.label
     -f.field :sale_line, :annotation, :field=>:textarea
-  -if product.stockable
+  -if product.stockable?
     =formalize do |f|
-      -# f.field :sale_line, :stock_id, :choices=>{:reflection=>:s}, :new=>true
       -f.field SaleLine.human_attribute_name("stock_id"), select(:sale_line, :stock_id, product_stocks_options(product))
-  -if product.nature == "subscrip"
+  -if product.subscription?
     -@subscription ||= @sale_line.new_subscription(params[:subscription])
     =render :partial=>"subscriptions/coordinates_form"
 
-  -if @current_user.can?(:change_prices_on_sales)
+  -if current_user.can?(:change_prices_on_sales)
     =formalize do |f|
       -f.title :change_price
       -f.field :sale_line, :price_amount
       -f.field :sale_line, :tax_id, :choices=>{:reflection=>:taxes}, :new=>true
 
-  -if @current_user.can?(:give_discounts_on_sales) and product.reduction_submissive?
+  -if current_user.can?(:give_discounts_on_sales) and product.reduction_submissive?
     =formalize do |f|
       -f.title :give_discount
       -f.field :sale_line, :reduction_percent, :size=>5
