--- a/app/views/sale_lines/_form.html.haml
+++ b/app/views/sale_lines/_form.html.haml
@@ -1,10 +1,36 @@
--# Form
+-# TODO: Manage extra content in form
 =sales_steps unless request.xhr?
 
-=hidden_field_tag(:sale_id, @sale.id)
-=formalize do |f|
-  -f.error :sale_line
-  -f.error :subscription
-  -f.title :infos
-  -f.field :sale_line, :price_id, :choices=>:available_prices, :new=>{:mode=>:sales, :currency=>@sale.currency}, :controller=>:interfacers, "data-dependents"=>"#detail", "data-parameter-name"=>"price_id"
-#detail{"data-refresh"=>url_for(:controller=>:sale_lines, :action=>:detail, :sale_id=>@sale.id), "data-refresh-mode"=>"update"}=render :partial=>"sale_lines/detail_form"
+-#=field_set @sale_line do
+-#  -association :sale, :field => :hidden
+-#  -input :price, :source => :availables_for_sales, :new => {:mode => :sales, :currency => @sale.currency} # , :controller=>:interfacers, "data-dependents"=>"#detail", "data-parameter-name"=>"price_id"
+-#  -partial(:detail, :depend_on => :price)
+-##detail{"data-refresh"=>url_for(:controller=>:sale_lines, :action=>:detail, :sale_id=>@sale.id), "data-refresh-mode"=>"update"}=render :partial=>"sale_lines/detail_form"
+
+-# TODO manage all new attributes
+=field_set do
+  -association :sale, :field => :hidden
+  -association :price, :source => :availables_for_sales, :new => {:mode => :sales, :currency => "sale.currency".to_sym }
+  -input :quantity
+  -association :unit, :readonly => true, :depend_on => :price, :value => "product.unit".to_sym
+  -input :annotation
+
+=field_set :stock, :depend_on => :price, :if => :stockable? do
+  -association :warehouse
+  -association :tracking, :depend_on => :warehouse, :if => :trackable?
+
+=field_set :subscriptions do
+  -nested_association :subscriptions, :depend_on => :price, :if => :subscription? do
+    -association :address
+    -input :comment
+    -input :started_on, :if => "product.subscription_nature.period?".to_sym
+    -input :stopped_on, :if => "product.subscription_nature.period?".to_sym
+    -input :first_number, :if => "product.subscription_nature.quantity?".to_sym
+    -input :last_number,  :if => "product.subscription_nature.quantity?".to_sym
+
+=field_set :change_price, :grant_on => :change_prices_on_sales do
+  -input :price_amount
+  -association :tax
+
+=field_set :give_discount, :grant_on => :give_discounts_on_sales, :depend_on => :price, :if => "product.reduction_submissive?".to_sym do
+  -input :reduction_percent, :size => 5
