--- a/app/views/sale_lines/_row_form.html.haml
+++ b/app/views/sale_lines/_row_form.html.haml
@@ -7,4 +7,4 @@
         %td#detail-row{:rowspan=>2, "data-refresh"=>url_for(:controller=>:sale_lines, :action=>:detail, :sale_id=>@sale.id, :mode=>:row), "data-refresh-mode"=>"update"}=render :partial=>"sale_lines/detail_row_form"
         %td{:rowspan=>2}=submit_tag(tg(:add))
       %tr
-        %td=combo_box_tag("sale_line[price_id]", :available_prices, {:controller=>:interfacers}, "data-dependents"=>"#detail-row", "data-parameter-name"=>"price_id")
+        %td=selector_tag("sale_line[price_id]", {:controller => :prices, :unroll => :availables_for_sales}, {}, "data-dependents"=>"#detail-row", "data-parameter-name"=>"price_id")
