--- a/app/views/settings/edit.html.haml
+++ b/app/views/settings/edit.html.haml
@@ -1,27 +1,9 @@
-=form_tag({:action=>:update}, {:class=>"vbox flex", :style=>'overflow:none', :method=>:put}) do
-  .fields.flex
-    -if @my_company.preferences.find(:all, :conditions=>["record_value_type = 'Sequence' AND record_value_id IS NULL"]).size > 0
-      =toolbar do |t|
-        -t.link :load, {:controller=>:sequences}, :method=>:post
-    =formalize do |f|
-      -f.error 'my_company'
-      -f.title tc(:general)
-      -f.field :my_company, :name
-      -f.field :my_company, :language, :choices=>languages
-      -f.field Company.human_attribute_name("code"), content_tag(:strong, @my_company.code)
-      -f.field Company.human_attribute_name("entity_id"), link_to(@my_company.entity.full_name, {:controller=>:entities, :action=>:edit, :id=>@my_company.entity_id})
-      -f.field :my_company, :currency, :choices=>currencies
-      -f.field :my_company, :sales_conditions, :field=>:textarea, :options=>{:cols=>60, :rows=>8}
-      -f.title :preferences
-      -for name, preference in @my_company.preferences_list
-        -f.field t("preferences."+name), {:datatype=>preference.nature.to_sym, :model=>preference.model, :value=>preference.value, :name=>"preference[#{name}][value]"}
+=form_tag({:action => :update}, {:method => :put}) do
+  =field_set :preferences do
+    -Preference.find_each do |preference|
+      -field t("preferences."+preference.name), {:datatype => preference.nature.to_sym, :model => preference.model, :value => preference.value, :name => "preference[#{preference.name}][value]"}
 
-      -#for name, options in @tree
-        -f.title tc(name)
-        -for key in options.keys.sort
-          -f.field t("preferences."+key), {:datatype=>options[key][:nature].to_sym, :model=>options[key][:model], :value=>options[key][:value], :name=>"preference[#{key}][value]"}
-    .end
-  .actions
+  =form_actions do
     =submit_tag tg(:update)
     =link_to tg(:cancel), :back
 
