--- a/app/views/entities/export.html.haml
+++ b/app/views/entities/export.html.haml
@@ -36,7 +36,7 @@
       .end
     .form-column
       =field_set :add_conditions do
-        -field tc('check'), {:choices => [[tc(:all_conditions), :and], [tc(:one_condition), :or]], :datatype => :radio, :name => :check, :value => params[:check]||:and}
+        =field tc('check'), {:choices => [[tc(:all_conditions), :and], [tc(:one_condition), :or]], :datatype => :radio, :name => :check, :value => params[:check]||:and}
       .fastadd
         =select_tag("condition", options_for_select(@conditions.collect{|x| [condition_label(x), x]}.sort{|a,b| a[0] <=> b[0]}))
         =link_to(tc(:add_condition), {:action => :export}, :remote => true, "data-update" => "#conditions", "data-update-at" => :bottom, "data-type" => :html, "data-with" => "#condition")
