--- a/app/views/journal_entries/_exchange_rate_form.html.haml
+++ b/app/views/journal_entries/_exchange_rate_form.html.haml
@@ -2,7 +2,7 @@
 -if @financial_year
   -if @journal.currency != @financial_year.currency
     =field_set :exchange_rate do
-      -field tl(:exchange_rate_from_x_to_y, :x => @journal.currency.to_currency.name, :y => @financial_year.currency.to_currency.name), text_field(:journal_entry, :original_currency_rate)
+      =field tl(:exchange_rate_from_x_to_y, :x => @journal.currency.to_currency.name, :y => @financial_year.currency.to_currency.name), text_field(:journal_entry, :original_currency_rate)
 
 =toolbar do |t|
   -t.link :new, {:controller => :journal_entry_lines, :printed_on => @journal_entry.printed_on, :journal_id => @journal.id}, :remote => true, "data-update" => "#lines", "data-update-at" => :bottom, "data-type" => :html, :method => :get
