--- a/app/views/entities/import.html.haml
+++ b/app/views/entities/import.html.haml
@@ -2,14 +2,14 @@
   .form-fields
     -if @step == :upload
       =field_set(:select_file_to_upload) do
-        -field tc(:file_to_upload), file_field_tag(:upload)
-        -field tc('first_line_as_title'), check_box_tag(:first_line_as_title)
-        -field tc('file_nature'), select_tag(:nature, options_for_select(@formats))
+        =field tc(:file_to_upload), file_field_tag(:upload)
+        =field tc('first_line_as_title'), check_box_tag(:first_line_as_title)
+        =field tc('file_nature'), select_tag(:nature, options_for_select(@formats))
     -elsif @step == :columns
       -params[:columns] ||= {}
       =field_set(:columns) do
         -@columns.each_index do |index|
-          -field(@columns[index], select_tag("columns[#{index}]", options_for_select(@options, params[:columns][index.to_s]||(@options.detect{|x| x[0].match(/#{@columns[index]}/)}[1] rescue nil)))+" "+content_tag(:span, @first_line[index], :class => :note))
+          =field(@columns[index], select_tag("columns[#{index}]", options_for_select(@options, params[:columns][index.to_s]||(@options.detect{|x| x[0].match(/#{@columns[index]}/)}[1] rescue nil)))+" "+content_tag(:span, @first_line[index], :class => :note))
     -elsif @step == :validate
       .flash.information
         %h3=tg('notifications.information')
