--- a/app/views/journals/bookkeep.html.haml
+++ b/app/views/journals/bookkeep.html.haml
@@ -2,8 +2,8 @@
 -if @step == 1
   =form_tag({}, :method => :put) do
     =field_set :period do
-      -field tc(:from), date_field_tag(:started_on, params[:started_on])
-      -field tc(:to),   date_field_tag(:stopped_on, params[:stopped_on])
+      =field tc(:from), date_field_tag(:started_on, params[:started_on])
+      =field tc(:to),   date_field_tag(:stopped_on, params[:stopped_on])
     =form_actions do
       =submit_tag(tg(:validate))
 
@@ -11,12 +11,12 @@
 -if @step == 2
   =form_tag({}, :method => :post) do
     =field_set :preferences do
-      -field tc(:from), ::I18n.localize(params[:started_on])
-      -field tc(:select_date_generation), ::I18n.localize(params[:stopped_on])
-      -field tc(:save_in_draft), check_box_tag("save_in_draft", "1", @current_company.prefer_bookkeep_in_draft?)
+      =field tc(:from), ::I18n.localize(params[:started_on])
+      =field tc(:select_date_generation), ::I18n.localize(params[:stopped_on])
+      =field tc(:save_in_draft), check_box_tag("save_in_draft", "1", @current_company.prefer_bookkeep_in_draft?)
     =field_set :counts_by_nature do
       -for nature in @natures
-        -f.field nature.to_s.classify.constantize.model_name.human, @records[nature].size
+        =field nature.to_s.classify.constantize.model_name.human, @records[nature].size
     =form_actions do
       =submit_tag(tg(:save))
       =link_to tg(:back), :action => :bookkeep, :finish_bookkeeping_on => params[:finish_bookkeeping_on]
