--- a/app/views/layouts/_side.html.haml
+++ b/app/views/layouts/_side.html.haml
@@ -5,7 +5,7 @@
 -menu = current_page.useful_menu if current_page
 
 -side_menu do |m|
-  -if request.url == root_url
+  -if request.url == root_url or request.url == admin_url
     -m.link(:destroy, {:controller => :sessions}, :method => :delete)
   -else
     -m.link(:index, {:controller => :dashboards}, :icon => :up)
